Don't quit zenity when the input stream is closed

When using --listen for a notification, zenity quits when the stream
ends. This makes it impossible to read commands from a pipe as in
`echo icon:info | zenity --notification --listen'.

https://bugzilla.gnome.org/show_bug.cgi?id=525596